@@ -99,8 +99,9 @@ as.gWidgetsRGtk2.GtkWindow <- function(widget,...) {
   tbl$Attach(getBlock(mbg), 0,1,0,1, yoptions = c("fill"))
   tbl$Attach(getBlock(tbg), 0,1,1,2, yoptions = c("fill"))
   tbl$AttachDefaults(getBlock(cpg), 0,1,2,3)
-#  if(!is.null(tmp <- Sys.info()) && tmp['sysname'] == "Darwin")
-#    getBlock(cbg)['border-width'] = 12
+  ## size grip issue if no statusbar
+  tmp <- getBlock(cpg);  tmp['border-width'] = 13
+
   tbl$Attach(getBlock(sbg), 0,1,3,4, yoptions = c("fill"))
   
   window$Add(tbl)
@@ -198,6 +199,8 @@ setMethod(".add",
           signature(toolkit="guiWidgetsToolkitRGtk2",obj="gWindowRGtk", value="gStatusbarRGtk"),
           function(obj, toolkit, value, ...) {
             add(tag(obj,"statusbargroup"), value, expand=TRUE)
+            tmp <- getBlock(tag(obj, "contentPane"))
+            tmp['border-width'] <- 0
           })
 
 ## delete
@@ -223,6 +226,9 @@ setMethod(".delete",
           signature(toolkit="guiWidgetsToolkitRGtk2",obj="gWindowRGtk", widget="gStatusbarRGtk"),
           function(obj, toolkit, widget, ...) {
             delete(tag(obj,"statusbargroup"), widget, ...)
+            widget <- getWidget(obj)
+            tmp <- getBlock(tag(obj, "contentPane"))
+            tmp['border-width'] <- 13
           })
 
 
