@@ -1,3 +1,15 @@
+2010-10-14  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gtree.R (isStillThere): fixes to this -- again.
+
+2010-10-10  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/ggroup.R: fill argument added. Before was simply taken as "both".
+
+2010-09-29  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gwindow.R (as.gWidgetsRGtk2.GtkWindow): adjustments to border-width
+
 2010-09-25  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gvarbrowser.R: Fixed bug in isStillThere, added summary
